# ai-remote-edge

./: .gitignore  README.md
deploy/: README.md  config.yaml
deploy/serial-reader/: app.json
deploy/serial-reader/systemd/: serial-reader.service
serial-reader/: Cargo.toml  Dockerfile  README.md
serial-reader/dataset/: 0000.csv  0001.csv  0002.csv  0003.csv  0004.csv  0005.csv  0006.csv  0007.csv  0008.csv  0009.csv  0010.csv  0011.csv  0012.csv  0013.csv  0014.csv  0015.csv  0016.csv  0017.csv  0018.csv  0019.csv  0020.csv  0021.csv  0022.csv  0023.csv  0024.csv  0025.csv  0026.csv  0027.csv  0028.csv  0029.csv  0030.csv  0031.csv  0032.csv  0033.csv  0034.csv  0035.csv  0036.csv  0037.csv  0038.csv  0039.csv  (+61 more)
serial-reader/src/: main.rs
temp-rs/: Cargo.toml  README.md  rust-toolchain.toml
temp-rs/arduino/temp/: temp.ino
temp-rs/src/: main.rs
