[package]
name = "temp-rs"
version = "0.1.0"
authors = ["Anton Whalley <anton@venshare.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "temp-rs"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
# libm = "0.2.8"
ufmt_float = "0.2.0"
micromath = "2.1.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
